# ExcelBench

./: .gitignore  .vercelignore  CLAUDE.md  CONTRIBUTING.md  METHODOLOGY.md  README.md  architecture.md  decisions.md  pyproject.toml
.github/workflows/: ci.yml  deploy-dashboard.yml
Plans/: codex-t0-named-ranges.md  codex-t0-tables.md
deploy/: index.html
docs-site/: docs.json  index.mdx  quickstart.mdx
docs-site/adapters/: adding-adapters.mdx  openpyxl.mdx  overview.mdx  wolfxl.mdx
docs-site/benchmark/: features.mdx  methodology.mdx  scoring.mdx
docs-site/cli/: benchmark.mdx  overview.mdx  perf.mdx  report.mdx
docs/blog/: 2026-02-15-fastest-python-excel-library.md
docs/plans/: 2026-02-04-excelbench-design.md  2026-02-08-performance-benchmarks.md  2026-02-15-wolfxl.md  codex-sprint1-prompt.md  codex-sprint2-prompt.md  phase1-implementation.md  phase3-rust-integration.md
docs/pyumya/: mkdocs.yml
docs/pyumya/docs/: api-reference.md  index.md  limitations.md
docs/pyumya/docs/guides/: comments.md  conditional-formatting.md  data-validation.md  freeze-panes.md  hyperlinks.md  images.md  merged-cells.md
docs/trackers/: calamine-xlsxwriter-sprint.md  library-expansion-tracker.md  performance-benchmark-runs.md  performance-benchmarks.md  umya-python-parity-tracker.md
docs/wolfxl/: index.md  mkdocs.yml
docs/wolfxl/fidelity/: fixture-design.md  scoring-model.md
docs/wolfxl/migration/: compatibility-matrix.md
docs/wolfxl/performance/: benchmark-results.md  methodology.md
docs/wolfxl/trust/: limitations.md
fixtures/excel/: README.md
fixtures/excel_xls/: manifest.json
fixtures/excel_xls/tier1/: 01_cell_values.xls  06_alignment.xls  08_dimensions.xls  09_multiple_sheets.xls
fixtures/throughput_xlsx/: README.md
results/: DASHBOARD.md  FIDELITY_DELTAS.md  README.md  dashboard.html  history.jsonl  matrix.csv  results.json
results/bulk_read_multi/perf/: README.md  history.jsonl  matrix.csv  results.json
results/bulk_write_multi/perf/: README.md  history.jsonl  matrix.csv  results.json
results/per_cell_fast/perf/: README.md  history.jsonl  matrix.csv  results.json
results/per_cell_slow/perf/: README.md  history.jsonl  matrix.csv  results.json
results/perf/: README.md  history.jsonl  matrix.csv  memory_profile.json  results.json
results/perf/bulk_read_100k/perf/: README.md  history.jsonl  matrix.csv  results.json
results/perf/bulk_read_multi/perf/: README.md  history.jsonl  matrix.csv  results.json
results/perf/bulk_write_100k/perf/: README.md  history.jsonl  matrix.csv  results.json
results/perf/bulk_write_multi/perf/: README.md  history.jsonl  matrix.csv  results.json
results/perf/per_cell_fast/perf/: README.md  history.jsonl  matrix.csv  results.json
results/perf/perf/: README.md  history.jsonl  matrix.csv
results/xls/: FIDELITY_DELTAS.md  README.md  history.jsonl  matrix.csv  results.json
results/xlsx/: FIDELITY_DELTAS.md  README.md  dashboard.html  history.jsonl  matrix.csv  results.json
rust/excelbench_rust/: Cargo.toml  build.rs  pyproject.toml
rust/excelbench_rust/src/: calamine_backend.rs  calamine_styled_backend.rs  lib.rs  ooxml_util.rs  rust_xlsxwriter_backend.rs  umya_backend.rs  util.rs
rust/excelbench_rust/src/umya/: auto_filter.rs  borders.rs  cell_values.rs  comments.rs  conditional_fmt.rs  data_validation.rs  dimensions.rs  formatting.rs  freeze_panes.rs  hyperlinks.rs  images.rs  merged_cells.rs  mod.rs  named_ranges.rs  tables.rs  util.rs
rust/excelbench_rust/src/wolfxl/: mod.rs  shared_strings.rs  sheet_patcher.rs  styles.rs
scripts/: generate_readme_assets.py  generate_throughput_fixtures.py  generate_twitter_visuals.py  generate_with_openpyxl.py  large_scale_benchmark.py  memory_profile.py  run_throughput_dashboard.py
src/excelbench/: __init__.py  cli.py  models.py  test_support.py
src/excelbench/generator/: __init__.py  base.py  generate.py  generate_xls.py
src/excelbench/generator/features/: __init__.py  alignment.py  background_colors.py  borders.py  cell_values.py  conditional_formatting.py  dimensions.py  formulas.py  images.py  multiple_sheets.py  named_ranges.py  number_formats.py  pivot_tables.py  tables.py  text_formatting.py
src/excelbench/harness/: __init__.py  runner.py
src/excelbench/harness/adapters/: __init__.py  base.py  calamine_adapter.py  openpyxl_adapter.py  openpyxl_readonly_adapter.py  pandas_adapter.py  polars_adapter.py  pycalumya_adapter.py  pyexcel_adapter.py  (+14 more)
src/excelbench/perf/: renderer.py  runner.py
src/excelbench/results/: __init__.py  dashboard.py  heatmap.py  html_dashboard.py  renderer.py  report_policy.py  scatter.py  scatter_interactive.py
src/pycalumya/: __init__.py  _cell.py  _styles.py  _utils.py  _workbook.py  _worksheet.py
tests/: conftest.py  test_adapter_base.py  test_adapter_edge_cases.py  test_adapters.py  test_cli_profiles.py  test_cli_visualizations.py  test_compare_results.py  test_coverage_gaps.py  test_dashboard.py  test_excelbench_rust_smoke.py  test_fixture_integration.py  test_generate_xls.py  test_lightweight_adapters.py  test_manifest_loading.py  test_named_ranges.py  test_perf_cli.py  test_perf_workloads.py  test_pivot_fixture_mode.py  test_pycalumya_compat.py  test_pyumya_docs_api_surface.py  test_renderer_utils.py  test_report_schema.py  test_results_heatmap.py  test_results_html_dashboard.py  test_results_scatter.py  test_runner_error_paths.py  test_runner_feature_reads.py  test_runner_format_gating.py  test_runner_harness.py  test_runner_utils.py  test_rust_integration.py  test_scatter_interactive.py  test_scoring_importance.py  test_tables.py  test_tablib_adapter.py  test_xlsxwriter_constmem_adapter.py  test_xlwt_xlrd_roundtrip.py
