[project]
name = "excelbench"
version = "0.1.0"
description = "Comprehensive benchmark suite for Excel library feature parity"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Wolfgang Schoenberger" }
]
keywords = ["excel", "benchmark", "xlsx", "openpyxl", "xlsxwriter"]

dependencies = [
    # Test file generation (requires Excel installed)
    "xlwings>=0.30.0",
    # Libraries under test - Python
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    "xlsxwriter>=3.1.0",
    "xlrd>=2.0.0",
    "pylightxl>=1.60",
    "python-calamine>=0.2.0",
    "pyexcel>=0.7.0",
    "pyexcel-xlsx>=0.6.0",
    "pandas>=2.0",
    "polars>=1.0",
    "fastexcel>=0.7.0",
    "tablib[xlsx]>=3.5",
    # Core utilities
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.9.0",
    "xlwt>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
rust = [
    "maturin>=1.0",
]

[project.scripts]
excelbench = "excelbench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excelbench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/excelbench", "tests"]

[[tool.mypy.overrides]]
module = [
    "openpyxl",
    "openpyxl.*",
    "pyexcel",
    "pyexcel.*",
    "pylightxl",
    "pylightxl.*",
    "python_calamine",
    "python_calamine.*",
    "xlsxwriter",
    "xlsxwriter.*",
    "xlrd",
    "xlrd.*",
    "xlwt",
    "xlwt.*",
    "xlwings",
    "xlwings.*",
    "pandas",
    "pandas.*",
    "polars",
    "polars.*",
    "tablib",
    "tablib.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "excelbench_rust",
    "excelbench_rust.*",
]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "excelbench.harness.adapters.rust_adapter_utils",
    "excelbench.harness.adapters.rust_calamine_adapter",
    "excelbench.harness.adapters.rust_xlsxwriter_adapter",
    "excelbench.harness.adapters.umya_adapter",
]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=excelbench"
