[package]
name = "excelbench_rust"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[lib]
name = "excelbench_rust"
crate-type = ["cdylib"]

[features]
default = []
calamine = ["dep:calamine", "dep:chrono"]
rust_xlsxwriter = ["dep:rust_xlsxwriter", "dep:indexmap", "dep:chrono"]
umya = ["dep:umya-spreadsheet", "dep:chrono"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }

# Optional backend dependencies (enabled via crate features)
calamine = { version = "0.25", optional = true, features = ["dates"] }
rust_xlsxwriter = { version = "0.79", optional = true, features = ["chrono"] }
umya-spreadsheet = { version = "2.2", optional = true }
indexmap = { version = "2.2", optional = true }

# Used for parsing/formatting calamine date/datetime values.
chrono = { version = "0.4", optional = true }
