[package]
name = "excelbench_rust"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[lib]
name = "excelbench_rust"
crate-type = ["cdylib"]

[features]
default = []
calamine = ["dep:calamine", "dep:zip", "dep:quick-xml", "dep:chrono"]
rust_xlsxwriter = [
  "dep:rust_xlsxwriter",
  "dep:indexmap",
  "dep:zip",
  "dep:quick-xml",
  "dep:chrono",
]
umya = ["dep:umya-spreadsheet", "dep:chrono"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "multiple-pymethods"] }

# Optional backend dependencies (enabled via crate features)
# Using our fork with styles PR #538 merged (Font/Fill/Borders/Alignment/NumberFormat parsing)
calamine = { git = "https://github.com/wolfiesch/calamine.git", branch = "styles", optional = true, features = ["dates"] }
rust_xlsxwriter = { version = "0.79", optional = true, features = ["chrono"] }
umya-spreadsheet = { version = "2.2", optional = true }
indexmap = { version = "2.2", optional = true }
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }
quick-xml = { version = "0.37", optional = true }

# Used for parsing/formatting calamine date/datetime values.
chrono = { version = "0.4", optional = true }

[build-dependencies]
pyo3-build-config = "0.24"
