[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "excelbench-rust"
version = "0.1.0"
description = "Rust backends for ExcelBench (PyO3 extension module)"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wolfgang Schoenberger" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
]

[tool.maturin]
bindings = "pyo3"
module-name = "excelbench_rust"
manifest-path = "Cargo.toml"
