[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wolfxl-rust"
version = "0.1.0"
description = "WolfXL native Rust extension (PyO3)"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wolfgang Schoenberger" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
]

[tool.maturin]
bindings = "pyo3"
module-name = "wolfxl._rust"
python-source = "python"
manifest-path = "Cargo.toml"
